# FaunaExplorer

./: .gitmodules  CMakeLists.txt
glad/include/glad/: glad.h
glad/src/: glad.c
incl/: Camera.h  EBO.h  Mesh.h  Model.h  Shader.h  Texture.h  VAO.h  VBO.h
models/: cube.mtl  dog_image.mtl
shaders/: default.fragment  default.vertex
srcs/: Camera.cpp  Mesh.cpp  Model.cpp  Shader.cpp  Texture.cpp  VAO.cpp  VBO.cpp  main.cpp
